[package]
name = "openexr"
version = "3.0.1"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openexr-sys = {path="../build/openexr-sys"}
imath-traits = "^0.1"
cgmath = {version = "^0.18", optional = true}
half = "^1.7"
thiserror = "^1.0"
paste = "^1.0"
bitflags = "1.2.1"

[dev-dependencies]
png = "0.16.8"
itertools = "0.10.0"

[features]
default = []
imath_cgmath = ["imath-traits/cgmath", "cgmath"]
long-form-docs = []

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
# and include the markdown docs
features = ["long-form-docs"]
# KateX for math notation
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
