[package]
name = "PROJECT_NAME-sys"
version = "MAJOR_VERSION.MINOR_VERSION.PATCH_VERSION"
description="test package"
license="BSD-3-Clause"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Scott Wilson <scott@propersquid.com>", "Luke Titley <from+openexr_rs@luketitley.com>"]
edition = "2018"
exclude = [
    "thirdparty/Imath/src/ImathTest",
    "thirdparty/Imath/src/PyImath",
    "thirdparty/openexr/src/examples",
    "thirdparty/openexr/src/test",
    "thirdparty/openexr/docs",
]

[build-dependencies]
cmake = "0.1"
regex = "1.5.4"
