[package]
name = "PROJECT_NAME-sys"
version = "MAJOR_VERSION.MINOR_VERSION.PATCH_VERSION"
description="cppmm-based FFI bindings for OpenEXR MAJOR_VERSION.MINOR_VERSION.PATCH_VERSION"
license="BSD-3-Clause"
authors = ["Anders Langlands <anderslanglands@gmail.com>",
           "Luke Titley <from+openexr_rs@luketitley.com>",
           "Scott Wilson <scott@propersquid.com>",
           "Tiago Carvalho <tiago.carvalho@loquattech.com>"]
edition = "2018"

exclude = [
    "thirdparty/Imath/src/ImathTest",
    "thirdparty/Imath/src/PyImath",
    "thirdparty/openexr/src/examples",
    "thirdparty/openexr/src/test",
    "thirdparty/openexr/docs",
    "thirdparty/zlib/amiga",
    "thirdparty/zlib/contrib",
    "thirdparty/zlib/doc",
    "thirdparty/zlib/examples",
    "thirdparty/zlib/msdos",
    "thirdparty/zlib/nintendods",
    "thirdparty/zlib/old",
    "thirdparty/zlib/os400",
    "thirdparty/zlib/qnx",
    "thirdparty/zlib/watcom",
]

[build-dependencies]
cppmm-build = "^0.2"
