file(GLOB ABIGEN_SOURCE *.cpp)
add_executable(abigen ${ABIGEN_SOURCE})
target_include_directories(abigen PRIVATE /home/anders/packages/imath/3.0.5/include)
target_include_directories(abigen PRIVATE /home/anders/packages/imath/3.0.5/include/Imath)
target_include_directories(abigen PRIVATE /home/anders/packages/openexr/3.0.5/include)
target_include_directories(abigen PRIVATE /home/anders/packages/openexr/3.0.5/include/OpenEXR)
target_link_libraries(abigen PRIVATE OpenEXR::OpenEXR)
target_link_libraries(abigen PRIVATE OpenEXR::OpenEXRUtil)
